2021-02-08  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-brxxx.el (ee-code-brurl-:remote, ee-code-brurl-:local)
	(ee-code-brfile-:local): commented out the `(setq
	browse-url-browser-function ...)'s in the generated code - they
	are not needed in eev anymore and people who use `browse-url' find
	them annoying.
	(ee-code-brurl, ee-code-brfile): added help links to the generated
	code.

	* eev-intro.el (find-eev-intro): promoted `(find-videos-intro)' to
	the list of basic intros.
	(find-eev-quick-intro): fixed a typo in the section "1. Installing
	eev": the "eev-" in `M-x eev-beginner' was missing.

2021-02-03  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-template0.el (ee-template00-re): new variable.
	(ee-template00): use `ee-template00-re'.

2021-01-24  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-refining-intro): rewrote the section "5.
	Pointing to anchors".

2021-01-23  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-eepitch-intro): new section: "3.2. Test
	blocks as documentation".

2021-01-13  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-audiovideo-intro): rewrote the section "4.
	Short hyperlinks to audio and video files".

2021-01-11  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-testblocks.el (ee-insert-test-scheme-mode): new function.

2021-01-02  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev.el: bumped the version. Changed the "Package-Requires" to
	Emacs 24.4 because of the new `advice-add' used by `find-man'.

	* eev-pkg.el: same.

	* eev-intro.el (find-audiovideo-intro): new section: "7.2.
	`find-eevvideo-links'".

	* eev-elinks.el (ee-find-efunction-links): added a line like this:
	`(find-epp (assoc FILENAME load-history))'.

	* eev-tlinks.el (ee-code-psnevideo): added an `interactive'.
	(ee-code-eevvideo): added an `interactive'.

	* eev-intro.el (find-videos-intro): rewrote the beginning.

2021-01-01  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-psnevideo-links): cosmetic changes.
